--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -6,9 +6,8 @@
 @import abstracts/functions
 @import abstracts/mixins
 
-// 2. Vendors
-
-@import vendors/normalize
+// 2. Vendors (node_modules)
+@import normalize.css
 
 // 3. Base stuff
 
@@ -30,8 +29,3 @@
 
 @import pages/home
 @import pages/starter
-
-
-// 7. Themes
-
-@import themes/default
