correctly splitted fonts

--- a/src/stylesheets/base/_fonts.sass
+++ b/src/stylesheets/base/_fonts.sass
@@ -10,3 +10,4 @@ $font-weights: ('Light': 300, 'Regular': 400, 'SemiBold': 600, 'Bold': 700, 'Ext
 $font-italics: ('LightItalic': 300, 'Italic': 400, 'SemiBoldItalic': 600, 'BoldItalic': 700, 'ExtraBoldItalic': 800 )
 
 @include fonts($font_weights)
+@include fonts($font_italics, true)
