--- a/src/stylesheets/pages/_starter.sass
+++ b/src/stylesheets/pages/_starter.sass
@@ -5,3 +5,7 @@
         font-weight: 100
         margin: 5px
         color: red
+        @media screen and ( max-width: 568px )
+            color: green
+            font-weight: 700
+            font-style: italic
