--- a/src/stylesheets/abstracts/_mixins.sass
+++ b/src/stylesheets/abstracts/_mixins.sass
@@ -30,7 +30,7 @@
 @mixin fonts($font_weights, $italics: false)
   @each $name, $weight in $font-weights
     @font-face
-      font-family: $font-name
+      font-family: "#{$font-name}"
       src: url("#{$assets-url}/fonts/OpenSans-#{$name}.ttf")
       font-weight: $weight
 
