--- a/src/stylesheets/layout/_header.sass
+++ b/src/stylesheets/layout/_header.sass
@@ -1,3 +1,14 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+
+.starter__header
+	background: green
+
+	font-size: 2rem
+	padding: 3rem
+
+	a
+		color: #FFF
+		padding: 20px
+		display: block
