--- a/src/template.pug
+++ b/src/template.pug
@@ -5,6 +5,5 @@ html(lang='en')
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         
     body
-        h1 Hello World!
-        div: img(src=require("./assets/images/img-connect.jpg").default, alt="#")
-        div: img(src=require("./assets/icons/icon-facebook.svg").default, alt="#")
+        main
+            
