--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -20,11 +20,14 @@
 // 4. Layout-related sections
 
 @import layout/header
+@import layout/main
 @import layout/footer
 
 // 5. Components
 
 @import components/button
+@import components/image
+@import components/wrapper
 
 // 6. Page-specific styles
 // For multipage sites
