--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -5,4 +5,51 @@ html(lang='en')
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Application
     body
+        header.header
+            h1 88 miles per hour
+            p Where we're going we don't need roads!
+            div.wrapper
+                - const header = 'static/images/header.jpg';
+                    img.image(src=header, alt="Woods, Mountains")
+             
+        
         main
+            section
+                h2 Erased from existence.
+                p Yeah, I think it's a major embarrassment having an uncle in prison. Hey you, get your damn hands off, oh. Oh, I sure like her, Marty, she is such a sweet girl. Isn't tonight the night of the big date? Alright, okay. Alright, there she is, George. Just go in there and invite her. Give me a hand, Lorenzo. Ow, dammit, man, I sliced my hand.
+
+                    div.wrapper
+                        - const step1 = 'static/images/step-1.jpg';
+                            img.image(src=step1, alt="Mountain, Valley")
+                     
+                 
+            section
+                h2 Hey, hey, keep
+                p Hey, hey, keep rolling, keep rolling there. No, no, no, no, this sucker's electrical. But I need a nuclear reaction to generate the one point twenty-one gigawatts of electricity that I need. Just turn around, McFly, and walk away. Are you deaf, McFly? Close the door and beat it. Yeah. Well uh, good, fine. Right.
+                
+                    div.wrapper
+                        - const step2 = 'static/images/step-2.jpg';
+                            img.image(src=step2, alt="Mountain")
+                     
+
+            section
+                h2 Whoa, whoa, okay.
+                p Ho, you mean you're gonna touch her on her- Yeah. Hey kid, what you do, jump ship? Uh, stories, science fiction stories, about visitors coming down to Earth from another planet. I don't like her, Marty. Any girl who calls a boy is just asking for trouble.
+                
+                    div.wrapper
+                        - const step3 = 'static/images/step-3-4.jpg';
+                            img.image(src=step3, alt="Mountain, Sea")
+                     
+
+                h2 Good morning, Mom.
+                p Precisely. I'd like you to meet my good friend George McFly. Yeah. Look, I'm just not ready to ask Lorraine out to the dance, and not you, nor anybody else on this planet is gonna make me change my mind. Nothing.
+
+        footer
+            section
+                h1 Wait a minute.
+                p Listen, Doc, you know there's something I haven't told you about the night we made that tape. That ain't no airplane, look. You don't understand. Hey Marty, I'm not your answering service, but you're outside pouting about the car, Jennifer Parker called you twice. Just relax now Calvin, you've got a big bruise on you're head.
+                span #zemeckis
+               
+                    div.wrapper
+                        - const footer = 'static/images/footer.jpg';
+                            img.image(src=footer alt="Mountains")
