--- a/src/stylesheets/base/_base.sass
+++ b/src/stylesheets/base/_base.sass
@@ -1,18 +1,19 @@
 html
-  box-sizing: border-box
-
+    box-sizing: border-box
+    height: 100%
 *,
 *::before,
 *::after
-  box-sizing: inherit
+    box-sizing: inherit
 
 a
-  color: $brand-color
-  text-decoration: none
+    color: $brand-color
+    text-decoration: none
 
-  +on-event
-    color: $text-color
-    text-decoration: underline
+    +on-event
+        color: $text-color
+        text-decoration: underline
 
 body
-  padding: 20px
+    // height: inherit
+    padding: 0 20px 20px
