--- a/src/stylesheets/base/_fonts.sass
+++ b/src/stylesheets/base/_fonts.sass
@@ -4,12 +4,7 @@
 // Fonts imported trough mixin
 
 // Include base fonts
-
-$font-name: 'Open Sans'
-$font-weights: ('Light': 300, 'Regular': 400, 'SemiBold': 600, 'Bold': 700, 'ExtraBold': 800 )
-@include fonts($font_weights)
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap')
 
 // Include italics if any.
-
-$font-italics: ('LightItalic': 300, 'Italic': 400, 'SemiBoldItalic': 600, 'BoldItalic': 700, 'ExtraBoldItalic': 800 )
-@include fonts($font_italics, true)
