--- a/src/stylesheets/layout/_footer.sass
+++ b/src/stylesheets/layout/_footer.sass
@@ -1,3 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+.footer
+    max-height: 250px
+
+    &__wrapper
+        max-width: 100%
