--- a/src/stylesheets/utils/_variables.sass
+++ b/src/stylesheets/utils/_variables.sass
@@ -4,7 +4,8 @@
 
 /// Regular font family
 /// @type List
-$text-font-stack: "Open Sans", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
+$font-name-sans: 'PT Sans', sans-serif !default
+$font-name-serif: 'PT Serif', serif !default
 
 /// Code (monospace) font family
 /// @type List
@@ -37,7 +38,7 @@ $max-width: 1180px !default
 /// Breakpoints map
 /// @prop {String} keys - Keys are identifiers mapped to a given length
 /// @prop {Map} values - Values are actual breakpoints expressed in pixels
-$breakpoints: ("small": 320px, "medium": 768px, "large": 1024px) !default
+$breakpoints: ("small": 400px, "medium": 768px, "large": 1440px) !default
 
 /// Relative or absolute URL where all assets are served from
 /// @type String
