--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -11,6 +11,7 @@
 @import utils/variables
 @import utils/functions
 @import utils/mixins
+@import utils/placeholders
 
 // 3. Base stuff
 
@@ -21,13 +22,17 @@
 
 @import layout/header
 @import layout/main
+@import layout/grid
 @import layout/footer
 
 // 5. Components
 
 @import components/button
 @import components/image
-@import components/wrapper
+@import components/box
+@import components/title
+@import components/text
+@import components/paragraph
 
 // 6. Page-specific styles
 // For multipage sites
