--- a/src/stylesheets/utils/_variables.sass
+++ b/src/stylesheets/utils/_variables.sass
@@ -4,8 +4,8 @@
 
 /// Regular font family
 /// @type List
-$font-name-sans: 'PT Sans', sans-serif !default
-$font-name-serif: 'PT Serif', serif !default
+$font-sans: 'PT Sans', sans-serif !default
+$font-serif: 'PT Serif', serif !default
 
 /// Code (monospace) font family
 /// @type List
