added extra small main content layout

--- a/src/stylesheets/components/_box.sass
+++ b/src/stylesheets/components/_box.sass
@@ -2,6 +2,10 @@
     background: lighten(deepskyblue, 32)
     height: 100%
     width: 100%
+    font-size: 6rem
+    display: flex
+    align-items: center
+    justify-content: center
 
     &:first-child 
         grid-row: span 1
