--- a/src/stylesheets/layout/_grid.sass
+++ b/src/stylesheets/layout/_grid.sass
@@ -3,5 +3,5 @@
     
     &--2
         grid-tempalte-columns: repeat(auto-fill, minmax(150px, 1fr))
-        grid-template-rows: 250px repeat(5, 150px)
+        grid-template-rows: 250px 150px 200px 100px 100px 200px 150px 60px 170px
         gap: 12px
