--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -12,7 +12,7 @@ html(lang='en')
 
         main.grid.grid--2.grid--3
                 
-                div.box 1
+                div.box.text-thick.text--white 1
 
                 div.paragraph
                     h2.title.title--small Erased from existence.
@@ -22,7 +22,7 @@ html(lang='en')
                     img.image(src=step1, alt="Mountain, Valley")
 
 
-                div.box 2
+                div.box.text-thick.text--white 2
 
                 div.paragraph
                     h2.title.title--small Hey, hey, keep
@@ -31,7 +31,7 @@ html(lang='en')
                 - const step2 = 'static/images/step-2.jpg';
                     img.image(src=step2, alt="Mountain")
 
-                div.box 3
+                div.box.text-thick.text--white 3
 
                 div.paragraph   
                     h2.title.title--small Whoa, whoa, okay.
@@ -40,11 +40,11 @@ html(lang='en')
                 - const step3 = 'static/images/step-3-4.jpg';
                     img.image(src=step3, alt="Mountain, Sea")     
                 
-                div.box 4
+                div.box.text-thick.text--white 4
 
                 div.paragraph
                     h2.title.title--small Good morning, Mom.
-                    p.text Precisely. I'd like you to meet my good friend George McFly. Yeah. Look, I'm just not ready to ask Lorraine out to the dance, and not you, nor anybody else on this planet is gonna make me change my mind. Nothing.
+                    p.text Alright, let's set your destination time. This is the exact time you left. I'm gonna send you back at exactly
 
         footer
             section
