--- a/src/stylesheets/components/_image.sass
+++ b/src/stylesheets/components/_image.sass
@@ -1,3 +1,18 @@
 .image
-    max-width: 50%
+    max-width: 100%
+    height: 100%
     display: block
+    object-position: center
+    object-fit: cover
+    justify-self: stretch
+    align-self: stretch
+
+    &:nth-last-child(2n+1)
+        grid-column: 1 / 2
+
+    &:nth-last-child(2n)
+        grid-row: span 2
+
+    // last images
+    &:nth-child(9)
+        grid-row: span 2
