--- a/src/stylesheets/components/_paragraph.sass
+++ b/src/stylesheets/components/_paragraph.sass
@@ -1,7 +1,7 @@
 .paragraph
 
-    // &:nth-last-of-type(2n+1)
-    //     grid-column: 2 / 3
-    
-    //  &:nth-last-of-type(2n)
-    //     grid-column: 1 / 2
+    &:nth-child(2n+1)
+        grid-column: 1 / 2
+
+    &:not(:nth-of-type(3n + 2))
+        grid-row: span 2
