finished xs and s layout with styling

--- a/src/stylesheets/base/_base.sass
+++ b/src/stylesheets/base/_base.sass
@@ -13,6 +13,6 @@ a
     +on-event
         color: $text-color
         text-decoration: underline
-
-body
-    padding: 0 20px 20px
+main
+    @include atSmall()
+        padding: 0 20px 20px
