--- a/src/stylesheets/layout/_header.sass
+++ b/src/stylesheets/layout/_header.sass
@@ -13,9 +13,9 @@
         display: block
         height: 80vh
         position: absolute
-        top: -20px
-        left: -20px
-        right: -20px
+        top:  0
+        left: 0
+        right: 0
         background: url('/src/assets/images/header.jpg')
         opacity: 0.75
         background-size: cover
@@ -23,17 +23,31 @@
         background-repeat: no-repeat
         z-index: -1
 
+    @include atSmall()
+        margin: 0 10px
+
     &__title
+        text-transform: lowercase !important
         margin-bottom: 0
         margin-top: auto
         padding-top: 200px
         text-shadow: 0 0 10px rgba(#000,0.25)
 
     &__text--bottom
-        margin-top: auto
         height: 20vh
         text-align: center
         padding-top: 20px
         letter-spacing: 0.0225rem
         color: lighten(#000, 10%)
         line-height: 1.618
+        margin: auto 10px 0
+
+.hashtag
+    width: 100%
+    display: block
+    text-align: center
+    font-size: 4rem
+    text-transform: uppercase
+    font-family: 'PT Sans', sans-serif
+    font-weight: 700
+    color: lighten(deepskyblue, 30%)
