--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -33,6 +33,7 @@
 @import components/title
 @import components/text
 @import components/paragraph
+@import components/content
 
 // 6. Page-specific styles
 // For multipage sites
