--- a/src/stylesheets/utils/_placeholders.sass
+++ b/src/stylesheets/utils/_placeholders.sass
@@ -7,3 +7,12 @@
 
 %text-slim
     font-weight: 100
+
+%text-center
+    text-align: center
+
+%text-left
+    text-align: left
+
+%head-foot-margin
+    margin: 0 10px 20px
