finished header and footer medium and large

--- a/src/stylesheets/components/_text.sass
+++ b/src/stylesheets/components/_text.sass
@@ -14,5 +14,8 @@
     &--big
         font-size: 20px
 
+        @include atMedium()
+            font-size: 1.7rem
+
     &--thick
         @extend %text-thick
