--- a/src/stylesheets/components/_title.sass
+++ b/src/stylesheets/components/_title.sass
@@ -10,6 +10,9 @@
     &--big
         font-size: 2.5rem
         letter-spacing: 0.15rem
+
+        @include atMedium()
+            font-size: 3.5rem
     
     &--small
         font-size: 1.2rem
