finished xs,s,l,xl

--- a/src/stylesheets/base/_base.sass
+++ b/src/stylesheets/base/_base.sass
@@ -13,6 +13,10 @@ a
     +on-event
         color: $text-color
         text-decoration: underline
+body
+    display: grid
+    justify-items: center
+
 main
     @include atSmall()
         padding: 0 20px 20px
