--- a/src/stylesheets/components/_title.sass
+++ b/src/stylesheets/components/_title.sass
@@ -17,6 +17,9 @@
     &--small
         font-size: 1.2rem
         
+        @include atLarge()
+            font-size: 1.4rem
+        
     &--slim
          @extend %text-slim
 
