--- a/src/stylesheets/layout/_footer.sass
+++ b/src/stylesheets/layout/_footer.sass
@@ -5,7 +5,8 @@
     position: relative
     @extend %head-foot-margin
     margin: 0
-
+    max-width: $site-width
+    
     &__title
         max-width: 120px
         margin-top: 20px
