--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -7,7 +7,7 @@ html(lang='en')
     body
         header.header
             h1.title.header__title.title--white.title--slim.title--big 88 miles per hour
-            p.text.text--white.text--thick.text--big Where we're going we don't need roads!       
+            p.text.header__text.text--white.text--thick.text--big Where we're going we don't need roads!       
             p.text.text--small.header__text--bottom Whoa, this is it, this is the part coming up, Doc. Well, I figured, what the hell. Ahh. Hey I'm talking to you, McFly, you Irish bug. So you're my Uncle Joey. Better get used to these bars, kid.
 
         main.content.grid.grid--2.grid--3
