--- a/src/stylesheets/components/_box.sass
+++ b/src/stylesheets/components/_box.sass
@@ -17,3 +17,14 @@
 
     &:nth-last-child(2n)
         grid-column: 2 / 3
+
+    @include atLarge()
+        font-size: 8rem
+        &:nth-of-type(5)
+            grid-row: 3 / 5
+
+        &:nth-of-type(3)
+            grid-row: 2 / 3
+
+        &:nth-of-type(7)
+            grid-row: 5 / 6
