--- a/src/stylesheets/components/_image.sass
+++ b/src/stylesheets/components/_image.sass
@@ -13,6 +13,18 @@
     &:nth-last-child(2n)
         grid-row: span 2
 
-    // last images
+    // last image
     &:nth-child(9)
         grid-row: span 2
+
+    @include atLarge()
+        &:nth-of-type(1),
+        &:nth-of-type(3)
+            grid-column: -1 / -2
+
+        &:nth-of-type(2)
+            grid-column: 1 / 2
+            grid-row: 2 / span 1
+
+        &:nth-of-type(3)
+            grid-row: 3 / 6
