--- a/src/stylesheets/components/_paragraph.sass
+++ b/src/stylesheets/components/_paragraph.sass
@@ -1,7 +1,16 @@
 .paragraph
-
+    padding: 0 10px
+    
+    @include atSmall()
+        padding: 0
+        
     &:nth-child(2n+1)
         grid-column: 1 / 2
 
     &:not(:nth-of-type(3n + 2))
         grid-row: span 2
+
+    @include atLarge()
+        &:nth-of-type(4)
+            grid-column: -1 / -2
+            grid-row: 2 / 3
