--- a/src/stylesheets/layout/_grid.sass
+++ b/src/stylesheets/layout/_grid.sass
@@ -4,3 +4,9 @@
     &--2
         grid-template-rows: 250px 150px 200px 100px 100px 200px 150px 60px 170px
         gap: 15px
+
+    &--3
+        @include atLarge()
+            grid-template-columns: 300px 300px 450px
+            grid-template-rows: 450px repeat(2, 500px) 150px 300px
+            gap: 25px
