--- a/src/stylesheets/utils/_variables.sass
+++ b/src/stylesheets/utils/_variables.sass
@@ -33,7 +33,7 @@ $dark-grey: rgb(68, 68, 68) !default
 
 /// Container's maximum width
 /// @type Length
-$max-width: 1180px !default
+$site-width: 1180px !default
 
 /// Breakpoints map
 /// @prop {String} keys - Keys are identifiers mapped to a given length
