--- a/src/stylesheets/components/_content.sass
+++ b/src/stylesheets/components/_content.sass
@@ -9,9 +9,9 @@
         line-height: 1.4
         margin: 10px 0
 
-        @include atLarge()
+        @include atMedium()
             font-size: 18px
             line-height: 1.618
-            
-    @include atLarge()
+
+    @include atMedium()
         margin-bottom: 40px
