--- a/src/stylesheets/components/_text.sass
+++ b/src/stylesheets/components/_text.sass
@@ -7,7 +7,7 @@
 
     &--small
         font-size: 14px
-        @include atLarge()
+        @include atMedium()
             font-size: 18px
             margin: auto 30px 0
 
