--- a/src/stylesheets/components/_title.sass
+++ b/src/stylesheets/components/_title.sass
@@ -16,8 +16,8 @@
     
     &--small
         font-size: 1.2rem
-        
-        @include atLarge()
+
+        @include atMedium()
             font-size: 1.4rem
         
     &--slim
