--- a/src/stylesheets/components/_box.sass
+++ b/src/stylesheets/components/_box.sass
@@ -18,7 +18,7 @@
     &:nth-last-child(2n)
         grid-column: 2 / 3
 
-    @include atLarge()
+    @include atMedium()
         font-size: 8rem
         &:nth-of-type(5)
             grid-row: 3 / 5
