--- a/src/stylesheets/components/_image.sass
+++ b/src/stylesheets/components/_image.sass
@@ -1,6 +1,6 @@
 .image
     max-width: 100%
-    height: 100%
+    // height: 100%
     display: block
     object-position: center
     object-fit: cover
@@ -17,7 +17,7 @@
     &:nth-child(9)
         grid-row: span 2
 
-    @include atLarge()
+    @include atMedium()
         &:nth-of-type(1),
         &:nth-of-type(3)
             grid-column: -1 / -2
@@ -25,6 +25,9 @@
         &:nth-of-type(2)
             grid-column: 1 / 2
             grid-row: 2 / span 1
+            object-position: 70%
+
 
         &:nth-of-type(3)
             grid-row: 3 / 6
+            object-position: 70%
